--- a/WebApplication/WebApplication.csproj
+++ b/WebApplication/WebApplication.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.3" />
+      <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.3" />
     </ItemGroup>
 
 </Project>
